    - remove debian/source.lintian-overrides
  * Add LSB Description field to debian/uwsgi.init.d.
  * Set Architecture to "all" for binary package uwsgi-extra because
    it contains no architecture dependent files.
  * Change uwsgi description. (Closes: #640698)
  * New binary packages:
    - uwsgi-plugin-carbon
    - uwsgi-plugin-graylog2
    - uwsgi-plugon-logsocket

 -- Janos Guljas <janos@resenje.org>  Mon, 02 Jan 2012 16:05:07 +0100

uwsgi (0.9.8.3-2) unstable; urgency=low

  [ Leonid Borisenko ]
  * uwsgi:
    - change location of runtime directory of uWSGI instance
      from: /run/uwsgi/<confname>
      to:   /run/uwsgi/app/<confname>
    - change location of uWSGI instance logfile
      from: /var/log/uwsgi/<confname>.log
      to:   /var/log/uwsgi/app/<confname>.log

  [ Janos Guljas ]
  * uwsgi-plugin-jwsgi-openjdk-6:
    - Change UWSGICONFIG_JVM_INCPATH and UWSGICONFIG_JVM_LIBPATH.
      (Closes: #640347)
    - update lintian-overrides binary-or-shlib-defines-rpath
      for new paths
  * Add myself as maintainer. Many thanks to Leonid Borisenko who did
    a great job of packaging and maintaining this package.

 -- Janos Guljas <janos@resenje.org>  Sun, 01 Jan 2012 21:01:34 +0100

uwsgi (0.9.8.3-1) unstable; urgency=low

  * New upstream version (0.9.8.3)
  * Install file CONTRIBUTORS into docs of all the packages
  * uwsgi:
    - move files with supplementary functions of init.d script from
      /usr/lib/uwsgi/init to /usr/share/uwsgi/init
    - move inherited configuration file from /usr/lib/uwsgi/conf to
      /usr/share/uwsgi/conf
  * uwsgi-core:
    - add new WSGI examples
  * uwsgi-plugin-luajit:
    - build package for armel architecture
  * uwsgi-plugin-python:
    - add Suggests: python-uwsgidecorators
  * uwsgi-plugin-python3:
    - add Suggests: python3-uwsgidecorators
  * python3-uwsgidecorators:
    - extend package description with note about possible improper work of
      uwsgidecorators module on Python 3;